--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
     "javaScript"
   ],
   "author": "Diego Andres Valderruten Vargas",
-  "license": "(MIT)"
+  "license": "(MIT)",
+  "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  }
 }
