ajustes de webpack por versiones, se crea Home

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Single page aplication",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development"
   },
   "keywords": [
     "javaScript"
@@ -18,5 +19,8 @@
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.16.11"
   }
 }
